# parquet_compactor_cli

./: .gitignore  Cargo.toml  README.md  config.toml
benches/: compaction_bench.rs
src/: cli.rs  compactor.rs  config.rs  errors.rs  file_discovery.rs  lib.rs  main.rs  parquet_io.rs  size_parser.rs  summary.rs
tests/: size_tests.rs
