[package]
name = "pcompact"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
polars = { version = "0.53", features = ["parquet", "lazy"] }
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "compaction_bench"
harness = false